# MevenScriptsAndStuff

./: MiraiTopology.txt  MiraiTopology.xml  README.md
CodePieces/: CMakeLists.txt  main.c  scanner.c  util.c
Mirai-Source-Code-master/mirai/bot/: CMakeLists.txt  checksum.c  main.c  scanner.c
PacketCreationCamera/: CMakeLists.txt  main.c
ScriptScanAnalysis/: main.c  scan  scan.c  scan.h
ScriptTopology/: CMakeLists.txt  main  main.c  monitor  monitor.c  rspec  rspec.c  rspec.xml  subnet  subnet.c  subnet2.sh  subnet5.sh
